Fixed navigation alignment

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -157,7 +157,6 @@ nav {
         &.extendednavigation {
             @media @tablet {
                 display: block;
-                float: left;
                 margin: 0;
                 width: 100%;
             }
@@ -194,11 +193,9 @@ nav {
                     padding: 60px 0 0;
                 }
                 li {
-                    float: left;
                     display: block;
                     padding: 0;
                     width: 100%;
-                    text-align: center;
                     @media @tablet {
                         background-color: @color-swatch5;
                         color: @color-swatch7;
